# wgpu-bench

./: Cargo.toml  README.md  scratchy
benches/: my_benchmark.rs  naive.rs  naive_onepass.rs  naive_vectorized.rs  naive_vectorized_onepass.rs  welford_scalar.rs  welford_vectorized.rs
benches/layernorm/: naive.rs  naive_onepass.rs  naive_vectorized.rs  naive_vectorized_onepass.rs  welford_scalar.rs  welford_vectorized.rs
benches/qgemm/: tfjs.rs
benches/sgemm/: tfjs.rs
kernels/: add.wgsl  layernorm_scalar.wgsl  layernorm_scalar_onepass.wgsl  layernorm_scalar_welford.wgsl  layernorm_vec4.wgsl  layernorm_vec4_onepass.wgsl  layernorm_vec4_welford.wgsl
kernels/layernorm/: naive_scalar.wgsl  naive_vec4.wgsl  onepass_vec4.wgsl  welford_vec4.wgsl
kernels/qgemm/: tfjs.wgsl
kernels/sgemm/: scalar_tf.wgsl  slow.wgsl  tfjs.wgsl
src/: bench.rs  data.rs  dtype.rs  handle.rs  harness.rs  lib.rs  metadata.rs  profiler.rs  quant.rs  shape.rs  storage.rs  tensor.rs  workload.rs
