[package]
name = "wgpu-bencher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.14.0"
log = "0.4.20"
num-traits = "0.2.17"
rand = "0.8.5"
smallvec = "1.11.2"
tabled = "0.14.0"
criterion = "0.3"
wgpu = "0.18.0"
