[package]
name = "wgpu-bencher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "naive"
harness = false

[[bench]]
name = "naive_vectorized"
harness = false

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.14.0"
log = "0.4.20"
num-traits = "0.2.17"
rand = {version="0.8.5", features=["small_rng"]}
smallvec = "1.11.2"
tabled = "0.14.0"
criterion = "0.3"
wgpu = {version="0.18.0", features=["expose-ids"]}
pollster = "0.3.0"
lazy_static = "1.4.0"
encase = "0.6.1"
derive-new = "0.6.0"
tera = "1.19.1"

inline-python = { version = "0.12.0"}
numpy = { version = "0.19.0"}
pyo3 = { version = "0.19.1"}
npyz = "0.8.1"
